--- a/server/package.json
+++ b/server/package.json
@@ -4,21 +4,32 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/server.js",
-    "bulid":"tsc -p .",
-    "dev":"tsc-watch -onSuccess \"node dist/server.js\""
+    "bulid": "tsc -p .",
+    "dev": "tsc-watch --onSuccess \"node dist/server.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.13",
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.15.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.1",
+    "multer": "^2.0.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/mongoose": "^5.11.96",
     "tsc-watch": "^6.3.1",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
-  }
+  },
+  "description": ""
 }
