--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.1",
     "@mui/x-charts": "^8.5.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.7",
+    "@types/react-redux": "^7.1.34",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "lucide-react": "^0.513.0",
@@ -23,6 +25,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.7"
