create products apis

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT = 3000 
 JWT_SECRET = "Ilovevrindha"
-JWTA_EXPIRE = "15m"
+JWTA_EXPIRE = "1d"
 JWTR_EXPIRE = "7d"
 MONGODB_URI = "mongodb+srv://vpranav0801:l8IGg95EOVKsLN5C@cluster0.vj1yrnp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 CLOUDINARY_API_SECRTE = "RxSuff1bQ3brqbDdXr9DYp2GO40"
