ecommerce flow complete

--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,5 @@ CLOUDINARY_API_SECRTE = "RxSuff1bQ3brqbDdXr9DYp2GO40"
 CLOUDINARY_NAME = "dkawojrgd"
 CLOUDINARY_URL="cloudinary://347267358453446:RxSuff1bQ3brqbDdXr9DYp2GO40@dkawojrgd"
 CLOUDINARY_API_KEY = "347267358453446"
+RAZORPAY_KEY_ID = "rzp_test_CKj2C70gdHzNLB"
+RAZORPAY_KEY_SECRET ="jtK0CvXVvMQ9ex6F6R5Fxl3D"
