google auth added

--- a/server/.env
+++ b/server/.env
@@ -9,3 +9,5 @@ CLOUDINARY_URL="cloudinary://347267358453446:RxSuff1bQ3brqbDdXr9DYp2GO40@dkawojr
 CLOUDINARY_API_KEY = "347267358453446"
 RAZORPAY_KEY_ID = "rzp_test_CKj2C70gdHzNLB"
 RAZORPAY_KEY_SECRET ="jtK0CvXVvMQ9ex6F6R5Fxl3D"
+GOOGLE_CLIENT_ID=1088118603933-uhl7k44c1rek916bt5mrgp97hees8169.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
