--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.13",
+    "@types/passport": "^1.0.17",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
@@ -25,11 +26,14 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/mongoose": "^5.11.96",
+    "@types/passport-google-oauth20": "^2.0.16",
     "tsc-watch": "^6.3.1",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
