--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "@types/react-redux": "^7.1.34",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
